crates/vize_croquis/src/cross_file/diagnostics/snapshots/vize_croquis__cross_file__diagnostics__tests__severity_badges-3.snap
---
source: crates/vize_croquis/src/cross_file/diagnostics/diagnostics_tests.rs
expression: markdown.as_str()
---
🔵 **INFO** `vize:croquis/cf/unmatched-inject`

### test
