crates/vize_croquis/src/cross_file/diagnostics/snapshots/vize_croquis__cross_file__diagnostics__tests__snapshot_diagnostic_with_related_files.snap
---
source: crates/vize_croquis/src/cross_file/diagnostics/diagnostics_tests.rs
assertion_line: 500
expression: output
---
=== Diagnostic with Related Files ===

Primary file: FileId(0)
Offset: 100 - 100
Related files count: 2

Related files:
  - FileId(1) at 50: Provider defined here
  - FileId(0) at 200: Value used here without .value

Markdown Output:
🟡 **WARNING** `vize:croquis/cf/provide-inject-type`

### Type mismatch: provide returns Ref<UserStore> but inject expects UserStore
